# TPlayer

./: .gitignore  BUTTON_STYLE_GUIDE.md  README.md  SEEK_DEBUG.md  fix_seek.py  generate_icons.py  index.html  package-lock.json  package.json  test.html  vite.config.ts
docs/designs/: online-music-service.md
docs/features/: online-music-match.md
docs/plans/: 2026-04-25-online-music-service.md
docs/superpowers/plans/: 2026-04-20-ffplay-playback-optimization.md  2026-04-22-ffplay-playback-fix.md
docs/superpowers/specs/: 2026-04-25-lyric-loading-priority-design.md
public/locales/: ar-SA.json  bn-BD.json  de-DE.json  en-US.json  es-ES.json  fr-FR.json  hi-IN.json  ms-MY.json  pt-PT.json  ru-RU.json  zh-CN.json  zh-TW.json
src/: App.vue  main.ts  tauri-apps.d.ts
src-tauri/: Cargo.toml  app_settings.json  build.rs  patch_tray_fix.js  patch_wav.js  tauri.conf.json
src-tauri/src/: audio_decoder.rs  commands.rs  commands_cache.rs  commands_cue.rs  cue_parser.rs  equalizer.rs  ffmpeg_decoder.rs  ffmpeg_transcoder.rs  http_server.rs  lib.rs  main.rs  special_decoder.rs  transcoder.rs
src/api/: music.ts
src/components/: OnlineMatchModal.vue  Settings.vue
src/composables/: useCue.ts
src/services/: cacheService.ts  i18n.ts  localMetadataService.ts  lyricParser.ts  musicDataService.ts  onlineMusicService.ts
src/stores/: local.ts
src/types/: tauri.d.ts  vue-virtual-scroller.d.ts
src/utils/: stringSimilarity.ts
