[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

walkdir = "2.4.0"
tokio = { version = "1.35.1", features = ["full"] }
rusqlite = "0.29.0"
rodio = { version = "0.17" }
# symphonia = { version = "0.5", features = ["all-codecs"] }
parking_lot = "0.12"
once_cell = "1.19"
lofty = "0.22"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2.1"
sysinfo = "0.30.0"
dirs = "5.0.1"
uuid = { version = "1.6", features = ["v4"] }
tempfile = "3.10"
md5 = "0.7"
